--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp-clean-css": "^2.2.1",
     "gulp-inject": "^4.1.0",
     "gulp-inject-string": "^1.1.0",
+    "gulp-install": "^1.1.0",
     "gulp-livereload": "^3.8.1",
     "gulp-merge-media-queries": "^0.2.1",
     "gulp-multinject": "^0.1.0",
